Force relations field fill all 4 columns of tab
issue5602
review18201002

--- a/view/party_form.xml
+++ b/view/party_form.xml
@@ -4,7 +4,7 @@ this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="/form/notebook" position="inside">
         <page string="Relations" id="relations">
-            <field name="relations"/>
+            <field name="relations" colspan="4"/>
         </page>
     </xpath>
 </data>
