Add proximity sorting of parties
issue5853
review28731002

--- a/view/relation_type_form.xml
+++ b/view/relation_type_form.xml
@@ -6,5 +6,7 @@ this repository contains the full copyright notices and license terms. -->
     <field name="name"/>
     <label name="reverse"/>
     <field name="reverse"/>
+    <separator name="usages" colspan="4"/>
+    <field name="usages" colspan="4"/>
 </form>
 
